backend/src/main/java/com/example/backend/controller/error/exception/votehistory/DuplicateVoteException.java
package com.example.backend.controller.error.exception.votehistory;

public class DuplicateVoteException extends IllegalArgumentException {

}
